# EvaluationFramework

./: .gitignore  README.md  bench.py  pyproject.toml
data/output_data/: ail_synthetic.npy  benchmark_manifest.json  eval_regime_labels.npy  eval_ticker_labels.npy  fff_pattern.npy  garch_synthetic.npy  sfagan_synthetic.npy  stats_df.csv  ticker_split.json
data_pipeline/: __init__.py  canonical.py  data_prep.py  regen_eval_labels.py  transform_ail.py
evaluation_framework/: __init__.py  bucket.py  canonical.py  fast_gaps.py  io.py  paths.py  protocol.py  samplers.py
evaluation_framework/buckets/: __init__.py  b1_marginal.py  b2_nonlinear_temporal.py  b3_leverage_effect.py  b4_kurtosis.py  b5_cfvc.py  b6_tail_regime.py
examples/: data_preparation_example.ipynb
paper/snippets/: methodology_snippet.tex  variance_decomposition_table.tex
scripts/: _runlog.py  run_b1_n_ablation.py  run_paired_vs_unpaired.py  run_variance_decomposition.py
tests/: test_phase1_sampler.py  test_phase3a_bench_paired.py
